--- a/restful-web-services/src/main/resources/application.yml
+++ b/restful-web-services/src/main/resources/application.yml
@@ -12,3 +12,11 @@ spring:
     user:
       name: gunjan
       password: gunjan
+  datasource:
+    url: jdbc:h2:mem:testdb
+  jpa:
+    defer-datasource-initialization: true
+    show-sql: true
+  h2:
+    console:
+      enabled: true
